fix: update scrollbar styles for improved aesthetics and usability

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -453,13 +453,15 @@ html::-webkit-scrollbar-thumb:hover {
   bottom: 0;
   background: repeating-linear-gradient(
       to bottom,
-      #aaa 0px,
+      #3e3e3e 0px,
       #aaa 4px,
-      #bbb 4px,
-      #bbb 8px
+      #3a7d6a 4px,
+      #2d2d2d 8px
     ),
-    linear-gradient(to bottom, #d0d0d0, #5a5a5a);
-  color: DarkSlateGrey;
+    linear-gradient(to bottom, #d0d0d0, #0f0f0f);
+  border: 1px solid #777;
+  box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.3);
+  color: #090d0d;
   font-size: 2rem;
   display: flex;
   align-items: center;
@@ -468,7 +470,6 @@ html::-webkit-scrollbar-thumb:hover {
   pointer-events: all;
   user-select: none;
   font-weight: bold;
-  letter-spacing: 0.1em;
 }
 .section-class {
   position: relative;
